# CarNameGen

./: .gitignore  README.md  carnamegen.py  pyproject.toml
carnamegen/: __init__.py  data.py  gen.py
