[tool.poetry]
name = "carnamegen"
version = "0.1.0"
description = "Markov car name generator"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MIT"
repository = "https://github.com/slavfox/carnamegen"
include = ["carnamegen/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
markovify = "^0.7.1"
docopt = "^0.6.2"
schema = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
carnamegen = 'carnamegen:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
